--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: php
+
 php:
   - "5.5"
   - "5.4"
   - "5.3"
+
+before_script:
+  - composer require kodova/hamcrest-php:*
+
+script: phpunit --configuration PHPUnit-all.xml --coverage-text
